--- a/frame_a.html
+++ b/frame_a.html
@@ -1,4 +1,9 @@
 
 <html>
-  
+  <head></head>
+  <body>
+    This is frame A.
+    <br>
+    <a href = "http//www.purdue.edu" target = "showframe"> Purdue University </a>
+  </body>
 </html>
