--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 
 <html>
-  
+  <script>document.write(document.lastModified);</script>
+  <frameset cols="200,*">
+  <frame src="frame_a.html">
+  <frame src="frame_b.html“ name="showframe">
+</frameset>
 </html>
