--- a/frame_b.html
+++ b/frame_b.html
@@ -1,4 +1,11 @@
 
 <html>
-  
+  <head></head>
+  <script>document.write(document.lastModified);</script>
+  <body>
+  This is frame B.
+  <br>
+  <img src = “ourteam”>
+  </body>
+
 </html>
