--- a/frame_b.html
+++ b/frame_b.html
@@ -3,9 +3,15 @@
   <head></head>
   <script>document.write(document.lastModified);</script>
   <body>
-  This is frame B.
-  <br>
-  <img src = “ourteam”>
-  </body>
-
+  <h1>Eloheh</h1>
+  <p>Team 5</p>
+  <h3>Team Members</h3>
+  <ul>
+    <li>Artem Kolomiiets</li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+  </ul>
+</body>
 </html>
