--- a/frame_a.html
+++ b/frame_a.html
@@ -3,8 +3,16 @@
   <head></head>
   <script>document.write(document.lastModified);</script>
   <body>
-    This is frame A.
-    <br>
-    <a href = "http//www.purdue.edu" target = "showframe"> Purdue University </a>
-  </body>
+  <h3>Site Navigation</h3>
+  <nav>
+    <a href="frame_a.html" target="content">Home Page</a>
+
+    <hr>
+    <strong>Team Members</strong>
+    <a href=".html"    target=</a>
+    <a href=".html"    target=</a>
+    <a href=".html"     target=</a>
+    <a href="company_page_4.html"    target=</a>
+  </nav>
+</body>
 </html>
