--- a/frame_b.html
+++ b/frame_b.html
@@ -1,17 +1,16 @@
 
 <html>
-  <head></head>
-  
+  <head>Team Cover Page</head>
   <body>
   <h1>Eloheh</h1>
   <p>Team 5</p>
   <h3>Team Members</h3>
   <ul>
     <li>Artem Kolomiiets</li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li>Colby Stapleton</li>
+    <li>Pranshu Aryal</li>
+    <li>Rachael Stiles</li>
+    <li>Avery Schaefer</li>
   </ul>
   <script>document.write(document.lastModified);</script>
 </body>
