--- a/frame_a.html
+++ b/frame_a.html
@@ -1,18 +1,17 @@
 
 <html>
   <head></head>
-  <script>document.write(document.lastModified);</script>
+
   <body>
   <h3>Site Navigation</h3>
   <nav>
-    <a href="frame_a.html" target="content">Home Page</a>
-
-    <hr>
-    <strong>Team Members</strong>
-    <a href=".html"    target=</a>
-    <a href=".html"    target=</a>
-    <a href=".html"     target=</a>
-    <a href="company_page_4.html"    target=</a>
+    
+    <a href="frame_b.html" target="content">Team Cover Page</a>
+    
+    <a href="company_team_page_2.html"    target="content">Rachael Stiles</a>
+    <a href="company_page_3.html"     target="content">Colby Stapleton</a>
+    <a href="company_page_4.html"    target="content">Artem Kolomiiets</a>
   </nav>
+  <script>document.write(document.lastModified);</script>
 </body>
 </html>
