--- a/frame_a.html
+++ b/frame_a.html
@@ -8,8 +8,8 @@
     
     <a href="frame_b.html" target="content">Team Cover Page</a>
     
-    <a href="company_team_page_2.html"    target="content">Rachael Stiles</a>
-    <a href="company_page_3.html"     target="content">Colby Stapleton</a>
+    <a href="company_team_page_2.html"    target="content">Colby Stapleton</a>
+    <a href="company_page_3.html"     target="content">Rachael Stiles</a>
     <a href="company_page_4.html"    target="content">Artem Kolomiiets</a>
   </nav>
   <script>document.write(document.lastModified);</script>
