--- a/frame_a.html
+++ b/frame_a.html
@@ -6,11 +6,11 @@
   <h3>Site Navigation</h3>
   <nav>
     
-    <a href="frame_b.html" target="content">Team Cover Page</a>
+
     
-    <a href="company_team_page_2.html"    target="content">Management Team</a>
-    <a href="company_page_3.html"     target="content">Our Products</a>
-    <a href="company_page_4.html"    target="content">Our Services</a>
+    <a href="company_team_page_2.html"    target="frame_b">Management Team</a>
+    <a href="company_page_3.html"     target="frame_b">Our Products</a>
+    <a href="company_page_4.html"    target="frame_b">Our Services</a>
   </nav>
   <script>document.write(document.lastModified);</script>
 </body>
