--- a/company_team_page_2.html
+++ b/company_team_page_2.html
@@ -16,6 +16,8 @@
 <font size = "5">
 <b><i>Management</i></b>
 </font>
+<br>
+<a href="Eloheh Backstory.pdf">Their Story</a>
 </header>
 </center>
 <br>
