--- a/frame_a.html
+++ b/frame_a.html
@@ -1,6 +1,17 @@
 
 <html>
-  <head>Navigation</head>
+  <head>
+    <title>Navigation</title>
+    <style type="text/css">
+      body { font-family: Arial, Helvetica, sans-serif; margin: 14px; line-height: 1.35; }
+      h1 { font-size: 16px; margin: 0 0 10px; }
+      nav a { display: block; margin: 6px 0; text-decoration: none; }
+      nav a:hover, nav a:focus { text-decoration: underline; }
+      hr { border: none; border-top: 1px solid #ddd; margin: 10px 0; }
+      .meta { margin-top: 12px; font-size: 12px; color: #555; }
+    </style>
+    
+  </head>
 
   <body>
   <h3>Site Navigation</h3>
