--- a/frame_a.html
+++ b/frame_a.html
@@ -19,9 +19,9 @@
     
 
     
-    <a href="company_team_page_2.html"    target="frame_b">Management Team</a>
-    <a href="company_page_3.html"     target="frame_b">Our Products</a>
-    <a href="company_page_4.html"    target="frame_b">Our Services</a>
+    <a href="company_team_page_2.html"    target="showframe">Management Team</a>
+    <a href="company_page_3.html"     target="showframe">Our Products</a>
+    <a href="company_page_4.html"    target="showframe">Our Services</a>
   </nav>
   <script>document.write(document.lastModified);</script>
 </body>
