--- a/company_team_page_2.html
+++ b/company_team_page_2.html
@@ -17,7 +17,7 @@
 <b><i>Management</i></b>
 </font>
 <br>
-<a href="Eloheh Backstory.pdf"target="blank>Their Story</a>
+<a href="Eloheh Backstory.pdf" target="blank">Their Story</a>
 </header>
 </center>
 <br>
@@ -35,7 +35,7 @@
 <b><i>Eugene Krabs</i></b>  
 </font>
 <br>
-<a href = "https://www.linkedin.com/in/mr-krabs-348a0b2b8/"target="blank">LinkedIn</a>  
+<a href = "https://www.linkedin.com/in/mr-krabs-348a0b2b8/" target="blank">LinkedIn</a>  
 <br>
 <a href="mailto:mrkrabs@example.com">Email</a>
 </center>
@@ -58,7 +58,7 @@
 <b><i>Squidward Tentacles</i></b>
 </font>
 <br>
-<a href = "https://www.linkedin.com/in/squidward-tentacles-58a7832a1/"target="blank">LinkedIn</a>
+<a href = "https://www.linkedin.com/in/squidward-tentacles-58a7832a1/" target="blank">LinkedIn</a>
 <br>
 <a href="mailto:squidward@example.com">Email</a>
 </center>
@@ -81,7 +81,7 @@
 <b><i>Spongebob Squarepants</i></b>
 </font>
 <br>
-<a href = "https://www.linkedin.com/in/jcahoon/"target="blank">LinkedIn</a> 
+<a href = "https://www.linkedin.com/in/jcahoon/" target="blank">LinkedIn</a> 
 <br>
 <a href="mailto:spongebob@example.com">Email</a>
 <br>
