--- a/index.html
+++ b/index.html
@@ -4,5 +4,11 @@
   <frame src="frame_a.html">
   <frame src="frame_b.html“ name="showframe">
     
+    <noframes>
+      <body>
+        This site uses frames. Open <a href="home_page.html">Home Page</a> directly.
+      </body>
+    </noframes>
+    
 </frameset>
 </html>
