--- a/company_team_page_2.html
+++ b/company_team_page_2.html
@@ -93,6 +93,13 @@
 <b><i>Departments</i></b>
 </font>
 </font>
+<br>
+<br>
+<font size ="3">1: Product Development</font>
+<font size ="3">2: Marketing & Strategy</font>
+<font size ="3">3: Operations & Supply Chain</font>
+<font size ="3">4: Health Data & Technology</font>
+<font size ="3">5: Customer Experience</font>
 </center>
 </body>
 </html>
