--- a/company_page_1 (13).html
+++ b/company_page_1 (13).html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-<h1><b><u></u>Welcome to Eloheh Health 💪</u></b> </h1>
+<h1><b><u>Welcome to Eloheh Health 💪</u></b></h1>
 </body> 
 
 <body>
