company_page_3.html

--- a/company_page_3.html
+++ b/company_page_3.html
@@ -3,7 +3,7 @@
 <head>
     <title> "Our Products and Services" </title>
    <style>
-    ul {text-align: left; margin-left: 20px; font-family: Georgia, 'Times New Roman', Times, serif; font-size: 20px; color: navy;}
+    ul {text-align: left; margin-left: 20px; font-family: Arial, 'Times New Roman', Times, serif; font-size: 20px; color: navy;}
     li {margin-bottom: 5px;}
 
     .right-list {position:fixed; top:175px; right:30px; width: 175px; font-family: Georgia, 'Times New Roman', Times, serif; font-size: 20px; color: blue;}
@@ -16,7 +16,7 @@
    </style>
 </head> 
 <body>
- <h1 style="color:navy ;font-size:larger; font-family:Georgia, 'Times New Roman', Times, serif">Our Products and Services</h1>
+ <h1 style="color:navy ;font-size:larger; font-family: Arial, 'Times New Roman, Times, serif">Our Products and Services</h1>
  <h2 style="color:blue; font-size:large; font-family: 'Times New Roman', Times, serif;">Learn about the unique features included in our newest Fitness Watch! </h2>
  <h3 style="color:blue"
  <ul>
