--- a/company_page_1 (13).html
+++ b/company_page_1 (13).html
@@ -70,8 +70,7 @@
 
 
 
-
-<h2>Need Help?</h2>
+<h2 style="font-size: 10px;">Need Help?</h2>
 <p> ✉️ Email <a href="mailto:pranshu.aryal@gmail.com">Eloheh</a></p>
 
 
