--- a/company_team_page_2.html
+++ b/company_team_page_2.html
@@ -104,6 +104,10 @@
 <font size ="3">4: Health Data & Technology</font>
 <br>
 <font size ="3">5: Customer Experience</font>
+<br>
+<br>
+<br>
+<img src="SpongeBob_SquarePants_characters_cast.webp" width="300" height="300">
 </center>
 </body>
 </html>
