company_page_3.html

--- a/company_page_3.html
+++ b/company_page_3.html
@@ -22,7 +22,7 @@
  <ul>
         <li> Monitoring Heart Rate</li>
         <li>Calories Burned</li>
-        <li>Distance Trveled and Number of Steps </li>
+        <li>Distance Traveled and Number of Steps </li>
         <li>Bluetooth Music</li>
         <li><u>And much more!</u></li>
     </ul>
@@ -36,7 +36,7 @@
     <li>Find one of our watches that meets your needs</li>
     <li>Join our membership program</li>
     <li> Unlock over 50 programs and partnership benefits</li>
-    <li>Monitor you progress!</li>
+    <li>Monitor your progress!</li>
 </ol>
 <a href="file:///Users/rachaelstiles/Downloads/Compare%20Our%20Prices%20to%20Competitors!.pdf" download
 target= "_blank"
