--- a/company_team_page_2.html
+++ b/company_team_page_2.html
@@ -103,11 +103,23 @@
 <br>
 <font size ="3">4: Health Data & Technology</font>
 <br>
-<font size ="3">5: Customer Experience</font>
+<font size ="3">5: Customer Experience</font></font>
 <br>
 <br>
 <br>
 <img src="SpongeBob_SquarePants_characters_cast.webp" width="300" height="300">
+<br>
+<br>
+<br>
+<font color ="light blue"><font size ="5">
+<b><i>Together we...s</i></b>
+</font>
+</font>
+<font size ="3">Empower Health Through Innovation</font>
+<br>
+<font size ="3">Build Brand Authenticity</font>
+<br>
+<font size ="3">Ensure Operational Excellence</font>
 </center>
 </body>
 </html>
