--- a/company_team_page_2.html
+++ b/company_team_page_2.html
@@ -112,9 +112,10 @@
 <br>
 <br>
 <font color ="light blue"><font size ="5">
-<b><i>Together we...s</i></b>
+<b><i>Together we...</i></b>
 </font>
 </font>
+<br>
 <font size ="3">Empower Health Through Innovation</font>
 <br>
 <font size ="3">Build Brand Authenticity</font>
