--- a/frame_a.html
+++ b/frame_a.html
@@ -18,7 +18,7 @@
   <nav>
     
 
-    <a href="company_team_page_1.html"    target="showframe">Our Story and History</a>
+    <a href="company_page_1.html"    target="showframe">Our Story and History</a>
     <a href="company_team_page_2.html"    target="showframe">Management Team</a>
     <a href="company_page_3.html"     target="showframe">Our Products</a>
     <a href="company_page_4.html"    target="showframe">Our Services</a>
