--- a/company_page_1.html
+++ b/company_page_1.html
@@ -6,21 +6,21 @@
     body{
       background-color: white;
       color: black;
-      font-family:"Helvetica Neue", Arial, sans-serif;
+      font-family:"Arial, Times New Roman;
       }
   </style>
 </head>
 
 <body>
-<h1><b><u><h1 style="font-size: 40px;">Welcome to Eloheh Health 💪</u></b></h1>
+<h1><b>Welcome to Eloheh Health 💪</b> </h1>
 </body> 
 
 <body>
   <h2 style="color:#1E3A8A">Our Story</h2>
   <p>
     Eloheh started in 2023 with the simple idea that staying healthy shouldn’t be complicated. 
-
-    We wanted to create fitness technology that actually helps people feel their best.
+   <p>
+  <span style="color:#ADD8E6; font-family: 'Times New Roman';"> We wanted to create fitness technology that actually helps people feel their best.</span> 
   </p>
 </body>
 </html>
@@ -33,7 +33,7 @@
 
 <h2 style="color:#1E3A8A">⌚Our Product</h2>
 <p>Our <b>Fitness Tracker</b> keeps you motivated with health insights.</p>
-<img src= <img src="Eloheh.jpg" width="200" height="300" alt="Fitness Tracker">
+<img src="Eloheh Product.jpg" alt="Description of image" width="500" height="300">
 
     
 
@@ -69,10 +69,8 @@
   </ul>
 
 
-
-<h2 style="font-size: 5px;" > Need Help?</h2>
+<h2>Need Help?</h2>
 <p> ✉️ Email <a href="mailto:pranshu.aryal@gmail.com">Eloheh</a></p>
-
 
   Last modified: 
     <script>document.write(document.lastModified);</script>
