--- a/company_page_1.html
+++ b/company_page_1.html
@@ -17,15 +17,18 @@
 
 <body>
   <h2 style="color:#1E3A8A">Our Story</h2>
-  <p>
-    Eloheh started in 2023 with the simple idea that staying healthy shouldn’t be complicated. 
-  <p>
-  <span style="color:#ADD8E6; font-family:'Times New Roman';">
-    We wanted to create fitness technology that actually helps people feel their best.
-  </span>
-</p>
 
+  <p>
+    Eloheh started in 2023 with the simple idea that staying healthy shouldn’t be complicated.
+  </p>
+
+  <p>
+    <span style="color:#ADD8E6; font-family:'Times New Roman';">
+      We wanted to create fitness technology that actually helps people feel their best.
+    </span>
+  </p>
 </body>
+
 </html>
 
   <p>
@@ -36,7 +39,7 @@
 
 <h2 style="color:#1E3A8A">⌚Our Product</h2>
 <p>Our <b>Fitness Tracker</b> keeps you motivated with health insights.</p>
-<img src="Eloheh Product.jpg" alt="Description of image" width="500" height="300">
+<img src="Eloheh Product.jpg" width="500" height="300">
 
     
 
