--- a/company_page_1.html
+++ b/company_page_1.html
@@ -50,7 +50,7 @@
     <li>Select a Membership Tier in the App</li>
     <li>Start your personalized fitness journey</li>
   </ol>
-<h2 style="color:#1E3A8A;"> 📜 Founders' Note</h2>
+<h2 style="color:#1E3A8A;"> Founders' Note</h2>
 <p>
   We started Eloheh with the belief that staying healthy should be fun, accessible, and personal. 
   Eloheh has grown into a movement to help people feel stronger and more connected every day.  
