--- a/company_page_3.html
+++ b/company_page_3.html
@@ -51,7 +51,7 @@ target= "_blank"
 <footer style="text-align:center; margin-top:50px; font-size:20px; color:black;">
     <p style=" font-family: Arial, 'Times New Roman', Times, serif; text-align:center; margin-top:20px; font-size:16px;">
         Have questions or comments?
-        <a href="mailto:watches.rstiles@gmail.com">Contact us here!</a>
+        <a href="mailto:watches.workout@gmail.com">Contact us here!</a>
     </p>
 <p style="font-size:14px; margin-top:10px;">
         Last modified: <span id="lastModified"></span>
