--- a/company_page_1.html
+++ b/company_page_1.html
@@ -50,7 +50,7 @@
     <li>Select a Membership Tier in the App</li>
     <li>Start your personalized fitness journey</li>
   </ol>
-<h2 style="color:#1E3A8A;"> Founders' Note</h2>
+<h2 style="color:#1E3A8A;">Note From Founders</h2>
 <p>
   We started Eloheh with the belief that staying healthy should be fun, accessible, and personal. 
   Eloheh has grown into a movement to help people feel stronger and more connected every day.  
@@ -64,7 +64,7 @@
   Pranshu Aryal, Rachael Stiles, Artem Kolomiiets, Colby Stapleton, Avery Schaefer <br>
   <i>Co-Founders, Eloheh</i>
   <p>
-  <a href="382 Eloheh Note .pdf" download>📥 Download Founders' Note </a>
+  <a href="382 Eloheh Note .pdf" download>📥 Download Note From Founders </a>
 </p>
 </p>
   <h2 style="color:#1E3A8A"> Our Services</h2>
