company_page_3.html

--- a/company_page_3.html
+++ b/company_page_3.html
@@ -42,7 +42,7 @@
 target= "_blank"
    style="color: grey; font-weight:bold; text-decoration: underline;">Want to know how our $300 Watches compare to competitors? Click here! </a>
 
-<img src = "https://previews.123rf.com/images/nd3000/nd30002002/nd3000200200684/139627750-happy-fit-friends-exercising-working-out-in-gym-to-stay-healthy-together.jpg" alt= "Friends Using Our Watch" class="bottom-left-photo"
+<img src = "https://previews.123rf.com/images/nd3000/nd30002002/nd3000200200684/139627750-happy-fit-friends-exercising-working-out-in-gym-to-stay-healthy-together.jpg" alt= "Friends Using Our Watch" class="bottom-left-photo" height= 300 width= 200
 
 <img src = "https://www.shape.com/thmb/XhaeY6hfYXOUEmpvxZKjOi_-H5A=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/running-longer-or-faster-31e97070bda14ffc8afdea52094504c7.jpg" alt="Woman Running" class="bottom-right-photo"
  
