--- a/company_page_1.html
+++ b/company_page_1.html
@@ -60,7 +60,7 @@
   to keep making wellness more enjoyable for everyone.
 </p>
 <p>
-  Warm Regards,<br>
+  Best Regards,<br>
   Pranshu Aryal, Rachael Stiles, Artem Kolomiiets, Colby Stapleton, Avery Schaefer <br>
   <i>Co-Founders, Eloheh</i>
   <p>
@@ -73,7 +73,6 @@
     <li>App-Based Membership Plan</li>
     <li>Exclusive Deals with <a href="https://shop.lululemon.com/" target="_blank">Lululemon</a></li>
   </ul>
-
 
 <h2>Need Help?</h2>
 <p> ✉️ Email <a href="mailto:pranshu.aryal@gmail.com">Eloheh</a></p>
