--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
 
 <html>
-  <frameset cols="200,*">
+<frameset cols="200,*">
   <frame src="frame_a.html">
-  <frame src="frame_b.html“ name="showframe">
-  
-    
+  <frame src="frame_b.html" name="showframe"> 
 </frameset>
 </html>
