company_page_3.html

--- a/company_page_3.html
+++ b/company_page_3.html
@@ -29,7 +29,7 @@
  <a href="https://shop.lululemon.com/" target="_blank">
     Learn more about membership benefits with our partnership with Lululemon!
 </a>
-<p style="font-family: Arial, Times, serif; color: grey; font-style: italic; font-weight: bold; margin-top: 5px;">
+<p style="font-family: Arial, Times, serif; color: navy; font-style: italic; font-weight: bold; margin-top: 5px;">
     Must own one of our watches and be Bronze Member to unlock membership benefits!
 </p>
 <ol class="right-list">
