--- a/company_page_1.html
+++ b/company_page_1.html
@@ -5,16 +5,15 @@
     body{
       background-color: white;
       color: black;
-      font-family:"Arial, Times New Roman;
+      font-family:"Arial, Times New Roman";
       }
   </style>
 </head>
 
 <body>
 <h1><b>Welcome to Eloheh Health 💪</b> </h1>
-</body> 
 
-<body>
+
   <h2 style="color:#1E3A8A">Our Story</h2>
 
   <p>
@@ -26,7 +25,6 @@
       We wanted to create fitness technology that actually helps people feel their best.
     </span>
   </p>
-</body>
 
 </html>
 
