--- a/company_page_1.html
+++ b/company_page_1.html
@@ -73,7 +73,7 @@
 
 <h2 style="font-size:10px;"> Need Help?</h2>
 
-<p> ✉️ Email <a href="mailto:pranshu.aryal@gmail.com">Eloheh</a></p>
+<p><h2 style="font-size:10px;"> ✉️ Email <a href="mailto:pranshu.aryal@gmail.com">Eloheh</a></p>
 
   Last modified: 
     <script>document.write(document.lastModified);</script>
