--- a/company_page_1.html
+++ b/company_page_1.html
@@ -36,9 +36,8 @@
 
 <h2 style="color:#1E3A8A">⌚Our Product</h2>
 <p>Our <b>Fitness Tracker</b> keeps you motivated with health insights.</p>
-<img src="Eloheh Product.jpg" width="500" height="300">
+<img src="Eloheh Product Image .jpg" width="500" height="300">
 
-    
 
   <h2 style="color:#1E3A8A"> How to Get Started</h2>
   <ol>
