--- a/company_page_1.html
+++ b/company_page_1.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-<h1><b>Welcome to Eloheh Health 💪</b> </h1>
+<h1><b><u>Welcome to Eloheh Health 💪</u></b></h1>
 
 
   <h2 style="color:#1E3A8A">Our Story</h2>
