--- a/company_page_4.html
+++ b/company_page_4.html
@@ -121,7 +121,7 @@
       <p>
         Kickstart your routine with our concise weekly planner and habit guide.
         Included is a printable workout log, RPE scale, and recovery checklist.
-        <a href="fitvision_fitness_guide.pdf" download>
+        <a href="eloheh_fitness_guide.pdf" download>
           Download the Fitness Guide (PDF)
         </a>
       </p>
