--- a/company_page_4.html
+++ b/company_page_4.html
@@ -128,7 +128,7 @@
       
       <p>
         Have questions?
-        <a href="mailto:support@eloheh.com"><strong>Email us!</strong></a>.
+        <a href="mailto:support@eloheh.com"><strong>Email us!</strong></a>
       </p>
       
     </section>
