--- a/frame_a.html
+++ b/frame_a.html
@@ -33,6 +33,9 @@
 <br>
 <br>
 
-<script>document.write(document.lastModified);</script>
+<script>
+    <p>Last modified:</p>
+    document.write(document.lastModified);
+</script>
 </body>
 </html>
