--- a/frame_a.html
+++ b/frame_a.html
@@ -33,9 +33,7 @@
 <br>
 <br>
 
-<script>
-    <p>Last modified:</p>
-    document.write(document.lastModified);
-</script>
+<p>Last modified:</p>
+<script>document.write(document.lastModified);</script>
 </body>
 </html>
