--- a/frame_b.html
+++ b/frame_b.html
@@ -13,6 +13,7 @@
     <li>Rachael Stiles</li>
     <li>Avery Schaefer</li>
   </ul>
+  <p>Last modified:</p>
   <script>document.write(document.lastModified);</script>
 </body>
 
