--- a/frame_a.html
+++ b/frame_a.html
@@ -29,7 +29,7 @@
 <a href = "company_page_4.html" target = "showframe"> Our Services</a>
 <br>
 <br>
-<a href = "company_page_5.html" target = "showframe"> Cusstomer Testimonials</a>
+<a href = "company_page_5.html" target = "showframe"> Customer Testimonials</a>
 <br>
 <br>
 
